# VeriWire

./: .gitignore  README.md  bank_sandbox.py  config.json  main.py  pyproject.toml
api/: bank_sandbox.py
tests/: conftest.py  test_bank_data.py  test_bank_sandbox.py  test_bank_tools.py  test_storage.py
veriwire/: __init__.py  bank_data.py  bank_tools.py  dfdetect.py  graph.py  session.py  storage.py
