[project]
name = "veriwire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "websockets>=15.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.32.0",
    "pydantic>=2.7.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "sqlalchemy>=2.0.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
